add additional info
