# app.py
@@ -19,11 +19,12 @@ def generate_response():
     visit_id = data.get('visit_id')
     intent = data.get('intent')
     history = data.get('history')
+    additonal_info = data.get('additional_info')
 
     es = Search()
     med_bot = MedBot(patient_id, visit_id)
     handle_search = es.handle_search
-    response = med_bot.generate_response(user_question, prescription_info, visit_info, handle_search, intent, history)
+    response = med_bot.generate_response(user_question, prescription_info, visit_info, handle_search, intent, history, additonal_info)
     
     return jsonify({"response": response})
 
@@ -44,4 +45,19 @@ if __name__ == '__main__':
 #            "visit_id": 1,
 #            "intent": "medicine",
 #            "history": []
+#            "additional_info": ["smoker", "seafood allergy", "nut allergy", "pregnant"]"
 #          }'
+
+
+# curl -X POST http://localhost:8080/generate_response \
+#      -H "Content-Type: application/json" \
+#      -d '{
+#            "user_question": "What are the next steps for my arthritis?",
+#            "prescription_info": ["Methotrexate", "Ibuprofen", "Folic Acid"],
+#            "visit_info": ["Arthritis"],
+#            "patient_id": "S1234567A",
+#            "visit_id": 1,
+#            "intent": "disease",
+#            "additional_info": ["smoker", "seafood allergy", "nut allergy", "pregnant"],
+#            "history": [{"user_question": "What does my medication for this visit do?", "response": "Methotrexate is a medication used to treat arthritis. It works by suppressing the immune system and reducing inflammation."}]
+#          }
